--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html> 
 <html> 
   <body> 
-    <h1>Hello World!!</h1> 
+    <h1><a href="ant.html">アリDBサンプル</a></h1> 
   </body> 
 </html> 
