--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!doctype html> 
 <html> 
+  <head>
+    <title>Ugawa's Page</title>
+  </head>
   <body> 
     <h1><a href="ant.html">アリDBサンプル</a></h1> 
   </body> 
