--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Ugawa's Page</title>
   </head>
   <body> 
-    <h1><a href="ant.html">アリDBサンプル</a></h1> 
+    <h1>Ugawa's Page</h1> 
+    <li><a href="ant.html">アリDBサンプル</a>
   </body> 
 </html> 
