--- a/ant.html
+++ b/ant.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <!-- saved from url=(0039)http://ant.miyakyo-u.ac.jp/J/index.html -->
-<html lang="ja"><head><meta http-equiv="content-type" content="text/html; charset=utf-8">
+<html lang="ja">
+<head><meta http-equiv="content-type" content="text/html; charset=utf-8">
+	<link rel="shortcut icon" href="jadg.ico">
 <!---20070712---><meta http-equiv="Expires" content="86400">
 		
 		<meta name="description" content="累積アクセス数がついに2億5千万ヒットを突破しました！日本に分布している270種以上のアリについて、その全種類を収録した画像データベースです。各種の解説のほか、多彩な検索機能を用意しています。2008年CD-ROM版のダウンロードによる再配布も始めました。">
