--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html> 
   <head>
     <title>Ugawa's Page</title>
+    <link rel="shortcut icon" href="favicon.ico">
   </head>
   <body> 
     <h1>Ugawa's Page</h1> 
