--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="shortcut icon" href="favicon.ico">
   </head>
   <body> 
-    <h1>Ugawa's Page</h1> 
+    <h2>Ugawa's Page</h2> 
+    <li><a href="https://docs.google.com/presentation/d/1ouykzy2_aBUL1LPHRYkQl4bNIq9rx9CMeJ5ALPYX3A0/edit#slide=id.p">かがくかん しりょう</a>
     <li><a href="ant.html">アリDBサンプル</a>
   </body> 
 </html> 
