--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html> 
 <html> 
   <head>
-    <title>Ugawa's Page</title>
+    <title>鵜川義弘 on GitHub</title>
     <link rel="shortcut icon" href="favicon.ico">
   </head>
   <body> 
-    <h2>Ugawa's Page</h2>
+    <h2>鵜川義弘のGitHubにおけるページ</h2>
     <ol>
       <li><a href="https://docs.google.com/presentation/d/1ouykzy2_aBUL1LPHRYkQl4bNIq9rx9CMeJ5ALPYX3A0/edit#slide=id.p">かがくかん しりょう</a>
       <li><a href="ant.html">アリDBサンプル</a>
