--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <title>鵜川義弘 on GitHub</title>
     <link rel="shortcut icon" href="favicon.ico">
   </head>
-  <body> 
+  <body　base href="index.html"> 
     <h2>鵜川義弘のGitHubにおけるページ</h2>
     <ol>
-      <li><a href="https://docs.google.com/presentation/d/1ouykzy2_aBUL1LPHRYkQl4bNIq9rx9CMeJ5ALPYX3A0/edit#slide=id.p">かがくかん しりょう</a>
+      <li><a href="https://docs.google.com/document/d/10UsR-U1BTXTbKNh9HvzsdbvntHak9yRT7hw21G1PJRY/">かがくかん しりょう</a>
       <li><a href="ant.html">アリDBサンプル</a>
     </ol>
   </body> 
