--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>鵜川義弘 on GitHub</title>
     <link rel="shortcut icon" href="favicon.ico">
   </head>
-  <body　base href="index.html"> 
+  <body　target="_blank"> 
     <h2>鵜川義弘のGitHubにおけるページ</h2>
     <ol>
       <li><a href="https://docs.google.com/document/d/10UsR-U1BTXTbKNh9HvzsdbvntHak9yRT7hw21G1PJRY/">かがくかん しりょう</a>
