--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" href="favicon.ico">
   </head>
   <body　target="_blank"> 
-    <h2>鵜川義弘のGitHubにおけるページ</h2>
+    <h2>鵜川のGitHubにおけるページ</h2>
     <ol>
       <li><a href="https://docs.google.com/document/d/10UsR-U1BTXTbKNh9HvzsdbvntHak9yRT7hw21G1PJRY/">かがくかん しりょう</a>
       <li><a href="ant.html">アリDBサンプル</a>
