--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <title>鵜川義弘 on GitHub</title>
     <link rel="shortcut icon" href="favicon.ico">
+    <base target="_blank">
   </head>
-  <body　target="_blank"> 
+  <body> 
     <h2>鵜川のGitHubにおけるページ</h2>
     <ol>
       <li><a href="https://docs.google.com/document/d/10UsR-U1BTXTbKNh9HvzsdbvntHak9yRT7hw21G1PJRY/">かがくかん しりょう</a>
