--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <body> 
     <h2>鵜川のGitHubにおけるページ</h2>
     <ol>
-      <li><a href="https://docs.google.com/document/d/10UsR-U1BTXTbKNh9HvzsdbvntHak9yRT7hw21G1PJRY/">かがくかん しりょう</a>
+      <li><a href="https://docs.google.com/document/d/1rH0a7pGDSuO1VDdt-4uIkS7OAmkJzwr0KDs3-aol-qk/edit#heading=h.aoeyc48vnqei">
+        梵天丸センサーを持つmicro:bitロボット</a>
       <li><a href="ant.html">アリDBサンプル</a>
     </ol>
   </body> 
